--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@
 
 .logo {
   font-family: 'Raleway', sans-serif;
-  font-weight: '700';
+  font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   color: var(--secondary-logo-color);
@@ -186,7 +186,6 @@
 
 /* Gallery */
 .list-header {
-  font-family: 'Roboto', sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -195,7 +194,6 @@
 }
 
 .list-header-text {
-  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   line-height: 1.87;
   color: var(--secondary-text-color);
