--- a/css/styles.css
+++ b/css/styles.css
@@ -196,7 +196,7 @@
 }
 
 /* Gallery */
-.list-header {
+.title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -204,7 +204,7 @@
   color: var(--primary-text-color);
 }
 
-.list-header-text {
+.title-info {
   font-size: 16px;
   line-height: 1.87;
   color: var(--secondary-text-color);
