--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,7 @@
 
 /* Features */
 .features-title {
+  font-size: inherit;
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
