--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@
 
 /* Features */
 .features-title {
-  font-size: inherit;
+  font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
